# axolotl

./: .clangd  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  Toolchain-mingw.cmake  axolotl.desktop  com.mooinglemur.axolotl.desktop  com.mooinglemur.axolotl.yml
.github/workflows/: build.yml  ci.yml  official-release.yml  release.yml  reusable-build.yml  tot-release.yml
documentation/: README.md
src/: Application.cpp  Application.h  ArchipelagoNetwork.cpp  ArchipelagoNetwork.h  ChatWindow.cpp  ChatWindow.h  Config.cpp  Config.h  DataPackageCache.cpp  DataPackageCache.h  EmbeddedWebServer.cpp  EmbeddedWebServer.h  FontScanner.cpp  FontScanner.h  HintWindow.cpp  HintWindow.h  ItemFeedWindow.cpp  ItemFeedWindow.h  LogicManager.cpp  LogicManager.h  OverviewWindow.cpp  OverviewWindow.h  PackStore.cpp  PackStore.h  Platform.cpp  Platform.h  ReceivedItemsWindow.cpp  ReceivedItemsWindow.h  SettingsWindow.cpp  SettingsWindow.h  SpoilerLog.cpp  SpoilerLog.h  SpoilerSphereTrackerWindow.cpp  SpoilerSphereTrackerWindow.h  TrackerWindow.cpp  TrackerWindow.h  Window.h  main.cpp  version.h
static/: feed.css  feed.html  feed.js  overview.css  overview.html  overview.js
tools/: embed_static.py  generate_version.cmake
